I am changing the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Titre de la page</title>
+  <title>New title</title>
 </head>
 <body>
   ...
